Tests/project2/errors/readexpr.flm
/* This tests for invalid expressions in read */

fun foo()
    begin
    read(a);
    read(3)
    end


        
